--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,9 @@
     @apply hidden !important;
   }
 }
-
+*{
+  font-family: font-serif;
+}
 
 @layer utilities {
   @keyframes float-slow {
@@ -37,3 +39,5 @@
     animation: float-slow 4s ease-in-out infinite;
   }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap');
